see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 automated tests, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

10-Feb-2012 Mark Dexter
 # Clear cache after system tests
 + Add Module0002 test

17-Jan-2012 Mark Dexter
 # Fix failing system tests for sample data changes

16-Jan-2012 Mark Dexter
 # Fix failing system test for Control Panel change

21-Dec-2011 Mark Dexter
 # Fix failing system test for sample data change

18-Dec-2011 Mark Dexter
 # Change link name for read private messages

16-Dec-2011 Mark Dexter
 # Fix failing system tests (for menu type changes in trunk)

12-Nov-2011 Mark Dexter
 + Added system test to test modals in front-end article edit

06-Nov-2011 Mark Dexter
 # Fix failing system test (for db17 branch)

25-Oct-2011 Mark Dexter
 # Fix failing system test due to module removal

26-Sep-2011 Mark Dexter
 + Added system test for path disclosure security issue
 + Added system test for installation in a non-default language

12-Sep-2011 Mark Dexter
 # Fix system test for change in sample data module positions

23-Aug-2011 Mark Dexter
 # Fix system test for h3 tag change

09-Jul-2011 Mark Dexter
 # Fix system test for changed message

06-Jul-2011 Mark Dexter
 ^ Force test db prefix to jos_ 

04-Jul-2011 Mark Dexter
 # Fix failing system test

28-Jun-2011 Mark Dexter
 # Fix system tests for issue 23125

27-Jun-2011 Mark Dexter
 + Add security0001Test to test some xss fixes

20-Jun-2011 Mark Dexter
 # Fix unit test JFilterInput to run correctly

06-Jun-2011 Mark Dexter
 # Fix doInstall for AJAX changes made to installation screens
 ^ Modify SeleniumJoomlaTestCase to check for PHP warnings as well as notices

30-May-2011 Mark Dexter