@@ -39,33 +39,33 @@ class ControlPanel0005 extends SeleniumJoomlaTestCase
 		$this->waitForPageToLoad("30000");
 		$this->click("link=Using Joomla!");
 		$this->waitForPageToLoad("30000");
-		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Help16:Menus_Menu_Item_Article_Single_Article')]"));
+		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Menus_Menu_Item_Article_Single_Article')]"));
 		$this->click("//li[@id='toolbar-cancel']/a/span");
 		$this->waitForPageToLoad("30000");
 		echo "Open Categogy Blog and check that help links to Category Blog help\n";
 		$this->click("link=Article Category Blog");
 		$this->waitForPageToLoad("30000");
-		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Help16:Menus_Menu_Item_Article_Category_Blog')]"));
+		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Menus_Menu_Item_Article_Category_Blog')]"));
 		$this->click("//li[@id='toolbar-cancel']/a/span");
 		$this->waitForPageToLoad("30000");
 		echo "Open Who's Online Module and check that help links to detailed help\n";
 		$this->click("link=Module Manager");
 		$this->waitForPageToLoad("30000");
 		$this->type("id=filter_search", "who");
-		$this->click("css=button[type=\"submit\"]");	
+		$this->click("css=button[type=\"submit\"]");
 		$this->waitForPageToLoad("30000");
 		$this->click("link=Who's Online");
 		$this->waitForPageToLoad("30000");
-		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Help16:Extensions_Module_Manager_Who_Online')]"));
+		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Extensions_Module_Manager_Who_Online')]"));
 		$this->click("//li[@id='toolbar-cancel']/a/span");
 		$this->waitForPageToLoad("30000");
 		echo "Open Articles Category and check that help links to detailed help\n";
 		$this->type("id=filter_search", "category");
-		$this->click("css=button[type=\"submit\"]");		
+		$this->click("css=button[type=\"submit\"]");
 		$this->waitForPageToLoad("30000");
 		$this->click("link=Articles Category");
 		$this->waitForPageToLoad("30000");
-		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Help16:Extensions_Module_Manager_Articles_Category')]"));
+		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Extensions_Module_Manager_Articles_Category')]"));
 		$this->click("//li[@id='toolbar-cancel']/a/span");
 		$this->waitForPageToLoad("30000");
 		echo "Clear search field\n";
@@ -76,7 +76,7 @@ class ControlPanel0005 extends SeleniumJoomlaTestCase
 		$this->waitForPageToLoad("30000");
 		$this->click("link=Logged-in Users");
 		$this->waitForPageToLoad("30000");
-		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Help16:Extensions_Module_Manager_Admin_Logged')]"));
+		$this->assertTrue($this->isElementPresent("//li/a[contains(@onclick, 'Extensions_Module_Manager_Admin_Logged')]"));
 		$this->click("//li[@id='toolbar-cancel']/a/span");
 		$this->waitForPageToLoad("30000");
 		$this->click("link=Control Panel");
